tests/snapshots/examples_fixtures/type_system__76_adt_nested_exhaustive_ok.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/76_adt_nested_exhaustive_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/type_system/76_adt_nested_exhaustive_ok.flx:20:5
   |
20 |     print(to_string(score(Empty)))
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
